OldGrammar/Grammar/GpfParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.2.2-SNAPSHOT
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\Alastair\Documents\PhD Thesis\CFVM\CaptureFoundry3\Grammar\Gpf.g4 by ANTLR 4.2.2-SNAPSHOT

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591

namespace Grammar {

using System;

using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.2.2-SNAPSHOT")]
[System.CLSCompliant(false)]
public partial class GpfParser : Parser {
	public const int
		T__32=1, T__31=2, T__30=3, T__29=4, T__28=5, T__27=6, T__26=7, T__25=8, 
		T__24=9, T__23=10, T__22=11, T__21=12, T__20=13, T__19=14, T__18=15, T__17=16, 
		T__16=17, T__15=18, T__14=19, T__13=20, T__12=21, T__11=22, T__10=23, 
		T__9=24, T__8=25, T__7=26, T__6=27, T__5=28, T__4=29, T__3=30, T__2=31, 
		T__1=32, T__0=33, ID=34, INT=35, HEX=36, COMMENT=37, WS=38;
	public static readonly string[] tokenNames = {
		"<INVALID>", "']'", "'-'", "'['", "'*'", "':'", "'('", "'int'", "'<'", 
		"'main'", "'!='", "'<='", "'{'", "'}'", "'case'", "')'", "'.'", "'+'", 
		"'$length'", "'='", "'goto'", "';'", "'field'", "'&&'", "'||'", "'>'", 
		"'protocol'", "'switch'", "'$value'", "'/'", "'=='", "'>='", "'filter'", 
		"'!'", "ID", "INT", "HEX", "COMMENT", "WS"
	};
	public const int
		RULE_program = 0, RULE_main = 1, RULE_filter_def = 2, RULE_int_def = 3, 
		RULE_protocol = 4, RULE_field = 5, RULE_field_range = 6, RULE_field_filter = 7, 
		RULE_switch = 8, RULE_switch_case = 9, RULE_statement = 10, RULE_bool_expr = 11, 
		RULE_bool_and = 12, RULE_bool_not = 13, RULE_bool_atom = 14, RULE_int_expr = 15, 
		RULE_int_sub = 16, RULE_int_mult = 17, RULE_int_div = 18, RULE_int_atom = 19, 
		RULE_sum_op = 20, RULE_mult_op = 21, RULE_comparison = 22, RULE_system_register = 23, 
		RULE_integer = 24;
	public static readonly string[] ruleNames = {
		"program", "main", "filter_def", "int_def", "protocol", "field", "field_range", 
		"field_filter", "switch", "switch_case", "statement", "bool_expr", "bool_and", 
		"bool_not", "bool_atom", "int_expr", "int_sub", "int_mult", "int_div", 
		"int_atom", "sum_op", "mult_op", "comparison", "system_register", "integer"
	};

	public override string GrammarFileName { get { return "Gpf.g4"; } }

	public override string[] TokenNames { get { return tokenNames; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public GpfParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class ProgramContext : ParserRuleContext {
		public ProtocolContext p;
		public ProtocolContext protocol(int i) {
			return GetRuleContext<ProtocolContext>(i);
		}
		public MainContext main() {
			return GetRuleContext<MainContext>(0);
		}
		public IReadOnlyList<ProtocolContext> protocol() {
			return GetRuleContexts<ProtocolContext>();
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_program; }
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_program);
		ProtocolLibrary.Clear();
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 53;
			_errHandler.Sync(this);
			_la = _input.La(1);
			do {
				{
				{
				State = 50; _localctx.p = protocol();
				ProtocolLibrary.AddProtocol(_localctx.p.value);
				}
				}
				State = 55;
				_errHandler.Sync(this);
				_la = _input.La(1);
			} while ( _la==26 );
			State = 57; main();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MainContext : ParserRuleContext {
		public Filter_defContext f;
		public Int_defContext i;
		public Filter_defContext filter_def(int i) {
			return GetRuleContext<Filter_defContext>(i);
		}
		public IReadOnlyList<Filter_defContext> filter_def() {
			return GetRuleContexts<Filter_defContext>();
		}
		public IReadOnlyList<Int_defContext> int_def() {
			return GetRuleContexts<Int_defContext>();
		}
		public Int_defContext int_def(int i) {
			return GetRuleContext<Int_defContext>(i);
		}
		public MainContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_main; }
	}

	[RuleVersion(0)]
	public MainContext main() {
		MainContext _localctx = new MainContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_main);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 59; Match(9);
			State = 60; Match(6);
			State = 61; Match(15);
			State = 62; Match(12);
			State = 69;
			_errHandler.Sync(this);
			_la = _input.La(1);
			do {
				{
				State = 69;
				switch (_input.La(1)) {
				case 32:
					{
					State = 63; _localctx.f = filter_def();
					 ProtocolLibrary.Kernels.AddKernel(_localctx.f.value);
					}
					break;
				case 7:
					{
					State = 66; _localctx.i = int_def();
					 ProtocolLibrary.Kernels.AddKernel(_localctx.i.value);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 71;
				_errHandler.Sync(this);
				_la = _input.La(1);
			} while ( _la==7 || _la==32 );
			State = 73; Match(13);
			ProtocolLibrary.GenerateProgram();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Filter_defContext : ParserRuleContext {
		public FilterKernel value;
		public IToken i;
		public Bool_exprContext b;
		public Bool_exprContext bool_expr() {
			return GetRuleContext<Bool_exprContext>(0);
		}
		public ITerminalNode ID() { return GetToken(GpfParser.ID, 0); }
		public Filter_defContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_filter_def; }
	}

	[RuleVersion(0)]
	public Filter_defContext filter_def() {
		Filter_defContext _localctx = new Filter_defContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_filter_def);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 76; Match(32);
			State = 77; _localctx.i = Match(ID);
			State = 78; Match(19);
			State = 79; _localctx.b = bool_expr();
			State = 80; Match(21);
			_localctx.value =  new FilterKernel((_localctx.i!=null?_localctx.i.Text:null), new Predicate(_localctx.b.value));
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Int_defContext : ParserRuleContext {
		public FieldKernel value;
		public IToken p;
		public IToken a;
		public IToken b;
		public IReadOnlyList<ITerminalNode> ID() { return GetTokens(GpfParser.ID); }
		public ITerminalNode ID(int i) {
			return GetToken(GpfParser.ID, i);
		}
		public Int_defContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_int_def; }
	}

	[RuleVersion(0)]
	public Int_defContext int_def() {
		Int_defContext _localctx = new Int_defContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_int_def);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 83; Match(7);
			State = 84; _localctx.p = Match(ID);
			State = 85; Match(19);
			State = 86; _localctx.a = Match(ID);
			State = 87; Match(16);
			State = 88; _localctx.b = Match(ID);
			State = 89; Match(21);
			_localctx.value =  new FieldKernel((_localctx.p!=null?_localctx.p.Text:null), (_localctx.a!=null?_localctx.a.Text:null), (_localctx.b!=null?_localctx.b.Text:null));
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ProtocolContext : ParserRuleContext {
		public Protocol value;
		public IToken i;
		public FieldContext f;
		public SwitchContext s;
		public FieldContext field(int i) {
			return GetRuleContext<FieldContext>(i);
		}
		public ITerminalNode ID() { return GetToken(GpfParser.ID, 0); }
		public SwitchContext @switch() {
			return GetRuleContext<SwitchContext>(0);
		}
		public IReadOnlyList<FieldContext> field() {
			return GetRuleContexts<FieldContext>();
		}
		public ProtocolContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_protocol; }
	}

	[RuleVersion(0)]
	public ProtocolContext protocol() {
		ProtocolContext _localctx = new ProtocolContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_protocol);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 92; Match(26);
			State = 93; _localctx.i = Match(ID);
			_localctx.value =  new Protocol((_localctx.i!=null?_localctx.i.Text:null));
			State = 95; Match(12);
			State = 99;
			_errHandler.Sync(this);
			_la = _input.La(1);
			do {
				{
				{
				State = 96; _localctx.f = field(_localctx.value);
				_localctx.value.AddField(_localctx.f.value);
				}
				}
				State = 101;
				_errHandler.Sync(this);
				_la = _input.La(1);
			} while ( _la==22 );
			State = 106;
			_la = _input.La(1);
			if (_la==27) {
				{
				State = 103; _localctx.s = @switch(_localctx.value);
				_localctx.value.Switch = _localctx.s.value;
				}
			}

			State = 108; Match(13);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FieldContext : ParserRuleContext {
		public Protocol arg;
		public Field value;
		public IToken i;
		public Field_rangeContext r;
		public Field_filterContext f;
		public StatementContext s;
		public StatementContext statement() {
			return GetRuleContext<StatementContext>(0);
		}
		public Field_rangeContext field_range() {
			return GetRuleContext<Field_rangeContext>(0);
		}
		public ITerminalNode ID() { return GetToken(GpfParser.ID, 0); }
		public Field_filterContext field_filter(int i) {
			return GetRuleContext<Field_filterContext>(i);
		}
		public IReadOnlyList<Field_filterContext> field_filter() {
			return GetRuleContexts<Field_filterContext>();
		}
		public FieldContext(ParserRuleContext parent, int invokingState) : base(parent, invokingState) { }
		public FieldContext(ParserRuleContext parent, int invokingState, Protocol arg)
			: base(parent, invokingState)
		{
			this.arg = arg;
		}
		public override int GetRuleIndex() { return RULE_field; }
	}

	[RuleVersion(0)]
	public FieldContext field(Protocol arg) {
		FieldContext _localctx = new FieldContext(_ctx, State, arg);
		EnterRule(_localctx, 10, RULE_field);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 110; Match(22);
			State = 111; _localctx.i = Match(ID);
			State = 112; Match(3);
			State = 113; _localctx.r = field_range();
			State = 114; Match(1);
			 
								_localctx.value =  new Field((_localctx.i!=null?_localctx.i.Text:null), _localctx.r.value, _localctx.arg); 
							
			State = 132;
			switch (_input.La(1)) {
			case 21:
				{
				State = 116; Match(21);
				}
				break;
			case 12:
				{
				State = 117; Match(12);
				State = 121;
				_errHandler.Sync(this);
				_la = _input.La(1);
				do {
					{
					{
					State = 118; _localctx.f = field_filter(_localctx.value);

												_localctx.value.AddFilter(_localctx.f.value);
											
					}
					}
					State = 123;
					_errHandler.Sync(this);
					_la = _input.La(1);
				} while ( _la==16 );
				State = 128;
				_la = _input.La(1);
				if (_la==18) {
					{
					State = 125; _localctx.s = statement();

												_localctx.value.SetStatement(new Statement(_localctx.arg, _localctx.s.value));
											
					}
				}

				State = 130; Match(13);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Field_rangeContext : ParserRuleContext {
		public FieldRange value;
		public IntegerContext a;
		public IntegerContext b;
		public IntegerContext integer(int i) {
			return GetRuleContext<IntegerContext>(i);
		}
		public IReadOnlyList<IntegerContext> integer() {
			return GetRuleContexts<IntegerContext>();
		}
		public Field_rangeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_field_range; }
	}

	[RuleVersion(0)]
	public Field_rangeContext field_range() {
		Field_rangeContext _localctx = new Field_rangeContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_field_range);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 134; _localctx.a = integer();
			State = 135; Match(5);
			State = 136; _localctx.b = integer();

							_localctx.value =  new FieldRange(_localctx.a.value, _localctx.b.value);
						
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Field_filterContext : ParserRuleContext {
		public Field arg;
		public FieldFilter value;
		public IToken _ID;
		public ComparisonContext c;
		public IntegerContext i;
		public IntegerContext integer() {
			return GetRuleContext<IntegerContext>(0);
		}
		public ComparisonContext comparison() {
			return GetRuleContext<ComparisonContext>(0);
		}
		public ITerminalNode ID() { return GetToken(GpfParser.ID, 0); }
		public Field_filterContext(ParserRuleContext parent, int invokingState) : base(parent, invokingState) { }
		public Field_filterContext(ParserRuleContext parent, int invokingState, Field arg)
			: base(parent, invokingState)
		{
			this.arg = arg;
		}
		public override int GetRuleIndex() { return RULE_field_filter; }
	}

	[RuleVersion(0)]
	public Field_filterContext field_filter(Field arg) {
		Field_filterContext _localctx = new Field_filterContext(_ctx, State, arg);
		EnterRule(_localctx, 14, RULE_field_filter);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 139; Match(16);
			State = 140; _localctx._ID = Match(ID);
			State = 141; _localctx.c = comparison();
			State = 142; _localctx.i = integer();
			State = 143; Match(21);
			 
							_localctx.value =   new FieldFilter((_localctx._ID!=null?_localctx._ID.Text:null), _localctx.c.value, _localctx.i.value, _localctx.arg); 
						
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SwitchContext : ParserRuleContext {
		public Protocol arg;
		public Switch value;
		public IToken i;
		public Switch_caseContext s;
		public Switch_caseContext switch_case(int i) {
			return GetRuleContext<Switch_caseContext>(i);
		}
		public IReadOnlyList<Switch_caseContext> switch_case() {
			return GetRuleContexts<Switch_caseContext>();
		}
		public ITerminalNode ID() { return GetToken(GpfParser.ID, 0); }
		public SwitchContext(ParserRuleContext parent, int invokingState) : base(parent, invokingState) { }
		public SwitchContext(ParserRuleContext parent, int invokingState, Protocol arg)
			: base(parent, invokingState)
		{
			this.arg = arg;
		}
		public override int GetRuleIndex() { return RULE_switch; }
	}

	[RuleVersion(0)]
	public SwitchContext @switch(Protocol arg) {
		SwitchContext _localctx = new SwitchContext(_ctx, State, arg);
		EnterRule(_localctx, 16, RULE_switch);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 146; Match(27);
			State = 147; Match(6);
			State = 148; _localctx.i = Match(ID);
			_localctx.value =  new Switch((_localctx.i!=null?_localctx.i.Text:null), _localctx.arg);
			State = 150; Match(15);
			State = 151; Match(12);
			State = 155;
			_errHandler.Sync(this);
			_la = _input.La(1);
			do {
				{
				{
				State = 152; _localctx.s = switch_case();
				_localctx.value.AddCase(_localctx.s.value);
				}
				}
				State = 157;
				_errHandler.Sync(this);
				_la = _input.La(1);
			} while ( _la==14 );
			State = 159; Match(13);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Switch_caseContext : ParserRuleContext {
		public SwitchCase value;
		public IToken a;
		public IToken b;
		public IReadOnlyList<ITerminalNode> ID() { return GetTokens(GpfParser.ID); }
		public ITerminalNode ID(int i) {
			return GetToken(GpfParser.ID, i);
		}
		public Switch_caseContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_switch_case; }
	}

	[RuleVersion(0)]
	public Switch_caseContext switch_case() {
		Switch_caseContext _localctx = new Switch_caseContext(_ctx, State);
		EnterRule(_localctx, 18, RULE_switch_case);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 161; Match(14);
			State = 162; _localctx.a = Match(ID);
			State = 163; Match(5);
			State = 164; Match(20);
			State = 165; _localctx.b = Match(ID);
			State = 166; Match(21);
			 _localctx.value =  new SwitchCase((_localctx.a!=null?_localctx.a.Text:null), (_localctx.b!=null?_localctx.b.Text:null)); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		public Expression value;
		public Int_exprContext e;
		public Int_exprContext int_expr() {
			return GetRuleContext<Int_exprContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_statement; }
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(_ctx, State);
		EnterRule(_localctx, 20, RULE_statement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 169; Match(18);
			State = 170; Match(19);
			State = 171; _localctx.e = int_expr();
			State = 172; Match(21);
			 _localctx.value =  new Expression(_localctx.e.value); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Bool_exprContext : ParserRuleContext {
		public OrString value;
		public Bool_andContext a;
		public Bool_andContext b;
		public Bool_andContext bool_and(int i) {
			return GetRuleContext<Bool_andContext>(i);
		}
		public IReadOnlyList<Bool_andContext> bool_and() {
			return GetRuleContexts<Bool_andContext>();
		}
		public Bool_exprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_bool_expr; }
	}

	[RuleVersion(0)]
	public Bool_exprContext bool_expr() {
		Bool_exprContext _localctx = new Bool_exprContext(_ctx, State);
		EnterRule(_localctx, 22, RULE_bool_expr);
		 _localctx.value =  new OrString(); 
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 175; _localctx.a = bool_and();

							_localctx.value.AddElement(_localctx.a.value);
						
			State = 181;
			_errHandler.Sync(this);
			_la = _input.La(1);
			do {
				{
				{
				State = 177; Match(24);
				State = 178; _localctx.b = bool_and();

									_localctx.value.AddElement(_localctx.b.value);
								
				}
				}
				State = 183;
				_errHandler.Sync(this);
				_la = _input.La(1);
			} while ( _la==24 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Bool_andContext : ParserRuleContext {
		public AndString value;
		public Bool_notContext a;
		public Bool_notContext b;
		public IReadOnlyList<Bool_notContext> bool_not() {
			return GetRuleContexts<Bool_notContext>();
		}
		public Bool_notContext bool_not(int i) {
			return GetRuleContext<Bool_notContext>(i);
		}
		public Bool_andContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_bool_and; }
	}

	[RuleVersion(0)]
	public Bool_andContext bool_and() {
		Bool_andContext _localctx = new Bool_andContext(_ctx, State);
		EnterRule(_localctx, 24, RULE_bool_and);
		 _localctx.value =  new AndString(); 
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 185; _localctx.a = bool_not();

							_localctx.value.AddElement(_localctx.a.value);
						
			State = 191;
			_errHandler.Sync(this);
			_la = _input.La(1);
			do {
				{
				{
				State = 187; Match(23);
				State = 188; _localctx.b = bool_not();

									_localctx.value.AddElement(_localctx.b.value);
								
				}
				}
				State = 193;
				_errHandler.Sync(this);
				_la = _input.La(1);
			} while ( _la==23 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Bool_notContext : ParserRuleContext {
		public PredicateAtom value;
		public Bool_atomContext e;
		public Bool_atomContext bool_atom() {
			return GetRuleContext<Bool_atomContext>(0);
		}
		public Bool_notContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_bool_not; }
	}

	[RuleVersion(0)]
	public Bool_notContext bool_not() {
		Bool_notContext _localctx = new Bool_notContext(_ctx, State);
		EnterRule(_localctx, 26, RULE_bool_not);
		try {
			State = 202;
			switch (_input.La(1)) {
			case 33:
				EnterOuterAlt(_localctx, 1);
				{
				State = 195; Match(33);
				State = 196; _localctx.e = bool_atom();
				 _localctx.value =  new NotAtom(_localctx.e.value); 
				}
				break;
			case 6:
			case ID:
				EnterOuterAlt(_localctx, 2);
				{
				State = 199; _localctx.e = bool_atom();
				 _localctx.value =  _localctx.e.value; 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Bool_atomContext : ParserRuleContext {
		public PredicateAtom value;
		public IToken a;
		public IToken b;
		public IToken c;
		public IToken i;
		public Bool_exprContext e;
		public ComparisonContext o;
		public Bool_exprContext bool_expr() {
			return GetRuleContext<Bool_exprContext>(0);
		}
		public ITerminalNode INT() { return GetToken(GpfParser.INT, 0); }
		public ComparisonContext comparison() {
			return GetRuleContext<ComparisonContext>(0);
		}
		public IReadOnlyList<ITerminalNode> ID() { return GetTokens(GpfParser.ID); }
		public ITerminalNode ID(int i) {
			return GetToken(GpfParser.ID, i);
		}
		public Bool_atomContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_bool_atom; }
	}
